--- a/Chart.yaml
+++ b/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 appVersion: "0.6.3"
 description: A Helm chart for Kube-hunter
 name: kube-hunter
-version: 1.0.3
+version: 1.0.4
 home: https://github.com/aquasecurity/kube-hunter
 icon: https://raw.githubusercontent.com/aquasecurity/kube-hunter/master/kube-hunter.png
 keywords:
@@ -16,3 +16,5 @@ maintainers:
     email: cedric@desaintmartin.fr
   - name: lizrice
     email: liz@lizrice.com
+  - name: jamesacris
+    email: james.acris@stfc.ac.uk
